Segfault adjusting Cycles motion blur via Python #33114

Closed
opened 2012-11-07 16:26:08 +01:00 by Jason van Gumster · 3 comments

%%%Motion blur (the setting or its shutter speed) are not yet animatable via the UI. As a workaround I attempted to use a short Python script to adjust motion blur on frame change (Python script attached... just reducing the motion blur shutter from 0.5 to 0.0 from frames 60 to 75).

The script works fine when scrubbing time and playing back the animation. However, as of r51941, the moment you attempt to render, Blender crashes (using both CPU and GPU rendering options). The following is a gdb backtrace of the crash:

(gdb) bt

  • 0 0x00007ffff236eba9 in glDeleteObjectARB () from /usr/lib/libGL.so.1
  • 1 0x0000000001dd4c42 in GPU_shader_free (shader=0x59b9388)
  at source/blender/gpu/intern/gpu_extensions.c:1204

2 0x0000000001dd8240 in GPU_pass_free (pass=0x8a395c8)

  at source/blender/gpu/intern/gpu_codegen.c:1376

3 0x0000000001dcb2a8 in GPU_material_free (ma=0x6d01ba8)

  at source/blender/gpu/intern/gpu_material.c:240

4 0x000000000199d722 in scene_changed (bmain=0x726f6d8, UNUSED_scene=

0x6ce06b8) at source/blender/editors/render/render_update.c:376

5 0x000000000199d80a in ED_render_id_flush_update (bmain=0x726f6d8, id=

0x6ce06b8) at source/blender/editors/render/render_update.c:398

6 0x0000000001f7ed6c in dag_editors_id_update (bmain=0x726f6d8, id=0x6ce06b8)

  at source/blender/blenkernel/intern/depsgraph.c:1764

7 0x0000000001f813a7 in dag_id_flush_update (sce=0x6ce06b8, id=0x6ce06b8)

  at source/blender/blenkernel/intern/depsgraph.c:2726

8 0x0000000001f81497 in DAG_ids_flush_tagged (bmain=0x726f6d8)

  at source/blender/blenkernel/intern/depsgraph.c:2754

9 0x0000000001fa8e5a in BKE_scene_update_for_newframe (bmain=0x726f6d8, sce=

0x6ce06b8, lay=1027) at source/blender/blenkernel/intern/scene.c:1099

10 0x0000000001d4d16c in RE_engine_render (re=0x8971528, do_all=0)

  at source/blender/render/intern/source/external_engine.c:365

11 0x0000000001d8c42f in do_render_3d (re=0x8971528)

  at source/blender/render/intern/source/pipeline.c:925

12 0x0000000001d8d2ec in do_render_fields_blur_3d (re=0x8971528)

  at source/blender/render/intern/source/pipeline.c:1223

13 0x0000000001d8e477 in do_render_composite_fields_blur_3d (re=0x8971528)

  at source/blender/render/intern/source/pipeline.c:1570

14 0x0000000001d8edf0 in do_render_all_options (re=0x8971528)

  at source/blender/render/intern/source/pipeline.c:1770

15 0x0000000001d9072e in RE_BlenderAnim (re=0x8971528, bmain=0x726f6d8, scene=

0x6ce06b8, camera_override=0x0, lay=1027, sfra=58, efra=90, tfra=1)
  at source/blender/render/intern/source/pipeline.c:2301

16 0x0000000001999a7b in render_startjob (rjv=0xa85a688, stop=0x89b31dc,

  do_update=0x89b31da, progress=0x89b31e0)
  at source/blender/editors/render/render_internal.c:392

17 0x00000000017a1300 in do_job_thread (job_v=0x89b3168)

  at source/blender/windowmanager/intern/wm_jobs.c:266

18 0x00000000024a6e3f in tslot_thread_start (tslot_p=0x72daa18)

  at source/blender/blenlib/intern/threads.c:218
  • 19 0x00007ffff00a2e0f in start_thread () from /usr/lib/libpthread.so.0
  • 20 0x00007fffef7dd45d in clone () from /usr/lib/libc.so.6%%%
%%%Motion blur (the setting or its shutter speed) are not yet animatable via the UI. As a workaround I attempted to use a short Python script to adjust motion blur on frame change (Python script attached... just reducing the motion blur shutter from 0.5 to 0.0 from frames 60 to 75). The script works fine when scrubbing time and playing back the animation. However, as of r51941, the moment you attempt to render, Blender crashes (using both CPU and GPU rendering options). The following is a gdb backtrace of the crash: (gdb) bt - 0 0x00007ffff236eba9 in glDeleteObjectARB () from /usr/lib/libGL.so.1 - 1 0x0000000001dd4c42 in GPU_shader_free (shader=0x59b9388) ``` at source/blender/gpu/intern/gpu_extensions.c:1204 ``` # 2 0x0000000001dd8240 in GPU_pass_free (pass=0x8a395c8) ``` at source/blender/gpu/intern/gpu_codegen.c:1376 ``` # 3 0x0000000001dcb2a8 in GPU_material_free (ma=0x6d01ba8) ``` at source/blender/gpu/intern/gpu_material.c:240 ``` # 4 0x000000000199d722 in scene_changed (bmain=0x726f6d8, UNUSED_scene= 0x6ce06b8) at source/blender/editors/render/render_update.c:376 # 5 0x000000000199d80a in ED_render_id_flush_update (bmain=0x726f6d8, id= 0x6ce06b8) at source/blender/editors/render/render_update.c:398 # 6 0x0000000001f7ed6c in dag_editors_id_update (bmain=0x726f6d8, id=0x6ce06b8) ``` at source/blender/blenkernel/intern/depsgraph.c:1764 ``` # 7 0x0000000001f813a7 in dag_id_flush_update (sce=0x6ce06b8, id=0x6ce06b8) ``` at source/blender/blenkernel/intern/depsgraph.c:2726 ``` # 8 0x0000000001f81497 in DAG_ids_flush_tagged (bmain=0x726f6d8) ``` at source/blender/blenkernel/intern/depsgraph.c:2754 ``` # 9 0x0000000001fa8e5a in BKE_scene_update_for_newframe (bmain=0x726f6d8, sce= 0x6ce06b8, lay=1027) at source/blender/blenkernel/intern/scene.c:1099 # 10 0x0000000001d4d16c in RE_engine_render (re=0x8971528, do_all=0) ``` at source/blender/render/intern/source/external_engine.c:365 ``` # 11 0x0000000001d8c42f in do_render_3d (re=0x8971528) ``` at source/blender/render/intern/source/pipeline.c:925 ``` # 12 0x0000000001d8d2ec in do_render_fields_blur_3d (re=0x8971528) ``` at source/blender/render/intern/source/pipeline.c:1223 ``` # 13 0x0000000001d8e477 in do_render_composite_fields_blur_3d (re=0x8971528) ``` at source/blender/render/intern/source/pipeline.c:1570 ``` # 14 0x0000000001d8edf0 in do_render_all_options (re=0x8971528) ``` at source/blender/render/intern/source/pipeline.c:1770 ``` # 15 0x0000000001d9072e in RE_BlenderAnim (re=0x8971528, bmain=0x726f6d8, scene= 0x6ce06b8, camera_override=0x0, lay=1027, sfra=58, efra=90, tfra=1) ``` at source/blender/render/intern/source/pipeline.c:2301 ``` # 16 0x0000000001999a7b in render_startjob (rjv=0xa85a688, stop=0x89b31dc, ``` do_update=0x89b31da, progress=0x89b31e0) at source/blender/editors/render/render_internal.c:392 ``` # 17 0x00000000017a1300 in do_job_thread (job_v=0x89b3168) ``` at source/blender/windowmanager/intern/wm_jobs.c:266 ``` # 18 0x00000000024a6e3f in tslot_thread_start (tslot_p=0x72daa18) ``` at source/blender/blenlib/intern/threads.c:218 ``` - 19 0x00007ffff00a2e0f in start_thread () from /usr/lib/libpthread.so.0 - 20 0x00007fffef7dd45d in clone () from /usr/lib/libc.so.6%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33114
No description provided.