Fix #33114: crash with render frame update script and GLSL.